Refacterd the card to stop the overflow on some recipes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,12 @@ input[type=submit] {
 .recipe__card__info__basic {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   margin-bottom: 1rem;
+}
+.recipe__card__info__basic__portion {
+  display: flex;
+  justify-content: space-between;
 }
 .recipe__card__info__web {
   display: flex;
@@ -349,6 +354,9 @@ input[type=submit] {
 }
 .recipe__card__method-h2 {
   margin-bottom: 2rem;
+}
+.recipe__card__method-p {
+  font-size: 1.6rem;
 }
 .recipe__right {
   border-left: 5rem solid #224a95;
