--- a/assets/sass/sections/_recipe.scss
+++ b/assets/sass/sections/_recipe.scss
@@ -29,23 +29,20 @@
       &__basic {
         display: flex;
         justify-content: space-between;
+        flex-direction: column;
         margin-bottom: 1rem;
 
         &__portion {
-          &-time {
-          }
-          &-serving {
-          }
+          display: flex;
+          justify-content: space-between;
+          
         }
       }
       &__web {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        &-link {
-        }
-        &-dietary {
-        }
+        
       }
       &-ingrediants {
         padding-left: 2rem;
@@ -58,6 +55,7 @@
         margin-bottom: 2rem;
       }
       &-p {
+        font-size: $font-size-lists;
       }
     }
   }
@@ -75,17 +73,16 @@
       }
     }
 
-    &__buttons{
-        display: flex;
-        padding: 2rem 1rem 2rem 1rem;
-        justify-content: space-around;
-        flex-direction: column;
-        height: 50%;
-        &-btn{
-            width: 100%;
-            height: 5rem;
-        }
-
+    &__buttons {
+      display: flex;
+      padding: 2rem 1rem 2rem 1rem;
+      justify-content: space-around;
+      flex-direction: column;
+      height: 50%;
+      &-btn {
+        width: 100%;
+        height: 5rem;
+      }
     }
   }
 }
